# python-imager

./: .gitignore  CODEPOINTS.md  Codepoints_imgs.py  LICENCE  README.md  TODO.md  pyproject.toml  setup.py  test.py  text_test.py  trackbar_test.py  update.sh
pyimager/: __init__.py  __vars__.py  calculs.py  chars.py  colors.py  fonts.py  main.py  resolution.py  terminal_colors.py  text.py  text_conv.py
pyimager/_vars_/: __vars__.py  calculs.py  text_conv.py
pyimg/: __init__.py  calculs.py  colors.py  resolution.py
src/pyimager/: __init__.py  __vars__.py  calculs.py  colors.py  main.py
src/pythonImager/: __init__.py  __vars__.py  calculs.py  colors.py  main.py  terminal_colors.py
