[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-imager"
version = "1.4.47"
description = "Python image program"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENCE"]
authors = [
    {name = "Rigavid", email = "tsana.code@gmail.com"}
]
keywords = ["python", "image"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "opencv-python",
    "screeninfo",
    "pillow"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyimager = ["fonts/*.ttf"]

[project.urls]
Repository = "https://github.com/rigavid/python-imager"
Issues = "https://github.com/rigavid/python-imager/issues"

[tool.setuptools.packages.find]
where = ["src"]